2014-12-07  Curtis Larsen <larsen@dixie.edu>

	* grub-core/net/tcp.c (grub_net_recv_tcp_packet): Fix double
	free when multiple empty segments were received (closes 42765).

2014-12-05  Andrei Borzenkov  <arvidjaar@gmail.com>

	* tests/util/grub-shell.in: Support --files also for netboot.
	* tests/file_filter_test.in: New file with file filters tests.
	* Makefile.util.def: Add file_filter_test.
	* conf/Makefile.extra-dist: ... and here.
	* tests/file_filter/file.gz: Test file for file_filter_test.
	* tests/file_filter/file.gz.sig: Likewise.
	* tests/file_filter/file.lzop: Likewise.
	* tests/file_filter/file.lzop.sig: Likewise.
	* tests/file_filter/file.xz: Likewise.
	* tests/file_filter/file.xz.sig: Likewise.
	* tests/file_filter/keys: Likewise.
	* tests/file_filter/keys.pub: Likewise.
	* tests/file_filter/test.cfg: Likewise.
	* grub-core/commands/verify.c: Fix memory corruption doing
	signature check for network files (closes 43601).

2014-12-01  Andrei Borzenkov  <arvidjaar@gmail.com>

	* grub-core/loader/i386/xen_fileXX.c (grub_xen_get_infoXX): Fix
	memory leak (CID 73645, 73782).
	* grub-core/fs/zfs/zfsinfo.c (print_vdev_info): Fix memory leak
	(CID 73635).

2014-11-30  Andrei Borzenkov  <arvidjaar@gmail.com>

	* grub-core/lib/syslinux_parse.c (free_menu): Do not free
	inline array (CID 73610).

2014-11-28  Andrei Borzenkov  <arvidjaar@gmail.com>

	* grub-core/io/lzopio.c (test_header): Fix double free (CID 73665)
	* grub-core/disk/geli.c (configure_ciphers): Fix memory leaks
	(Coverity CID 73813, 73710)
	* grub-core/disk/luks.c (configure_ciphers): Fix memory leaks
	and use after free (Coverity CID 73813, 73710, 73730)
	* grub-core/disk/luks.c (luks_recover_key): Fix memory leak (Coverity
	CID 73854)
	* util/grub-install-common.c (grub_install_get_target): Check return
	value of grub_util_fd_read (Coverity CID 73819).
	* util/grub-mkstandalone.c (add_tar_file): Fix out of bound access
	to hd.magic (Coverity CID 73587, 73888, bug 43690).
